[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/ControllingScripts/MainEffectSounds.gd" type="Script" id=1]
[ext_resource path="res://Assets/SoundEffects/Death_sound_player.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/SoundEffects/Gadget_shoot_sound.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/SoundEffects/Laser_beam.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/SoundEffects/Double_laser_sound.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/SoundEffects/Laser_turret_sound.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/SoundEffects/Laser_turret_beam.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/SoundEffects/Jump.wav" type="AudioStream" id=8]



[node name="MainEffectSounds" type="Node2D"]
script = ExtResource( 1 )

[node name="Player_death_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -36.671

[node name="Gadget_shoot_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -40.879

[node name="Laser_beam_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -30.0

[node name="Double_laser_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -37.0

[node name="Laser_turret_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -55.0

[node name="Laser_turret_beam_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -50.0

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -40.0
